--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,10 +9,10 @@
 
     <string name="or">or</string>
     <string name="email">Email</string>
-    <string name="displayName">Display Name</string>
-    <string name="password">Password</string>
-    <string name="register">Register</string>
-    <string name="log_in">Log in</string>
+    <string name="displayName">Görüntülenecek İsim</string>
+    <string name="password">Şifre</string>
+    <string name="register">Kayıt Ol</string>
+    <string name="log_in">Giriş Yap</string>
     <string name="forgot_my_pwd">I’ve forgotten my password?</string>
     <string name="my_chats">My Chats</string>
     <string name="all_chats">All Chats</string>
@@ -20,22 +20,21 @@
     <string name="to">To:</string>
     <string name="edit">Edit</string>
     <string name="new_chat">New Chat</string>
-    <string name="alert_wait">Please wait...</string>
+    <string name="alert_wait">Lütfen Bekleyiniz...</string>
     <string name="err_fields_empty">Please fill all the fields.</string>
     <string name="err_singup">Error occurred while signup:</string>
     <string name="err_login">Error occurred while login:</string>
     <string name="err_users">Error occurred while finding users:</string>
-    <string name="alert_loading">Loading...</string>
+    <string name="alert_loading">Yükleniyor. Bekleyiniz.</string>
     <string name="msg_no_user_found">No users found for chat!</string>
-    <string name="delivered_text">Delivered</string>
-    <string name="sending_text">Sending...</string>
-    <string name="failed_text">Failed</string>
+    <string name="delivered_text">Gönderildi</string>
+    <string name="sending_text">Gönderiliyor</string>
+    <string name="failed_text">Hata Oluştu</string>
     <string name="text">text</string>
     <string name="text2">text</string>
     <string name="textview">TextView</string>
     <string name="text3">text</string>
     <string name="text4">text</string>
     <string name="textviewq">TextView</string>
-    <string name="ifrele">Şifrele</string>
     <string name="sifrele">Şifrele</string>
 </resources>
